...
      padding: const EdgeInsets.symmetric(horizontal: 16, vertical: 8),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Row(
            children: [
              Text('支払', style: labelStyle),
              const Spacer(),
              IconButton(
                key: const Key('payment_plus_button'),
                icon: const Icon(Icons.add),
                onPressed: () => context
                    .read<LinkDetailBloc>()
                    .add(const LinkDetailPaymentPlusTapped()),
              ),
            ],
...
